--- a/ot.zyx.top/register.html
+++ b/ot.zyx.top/register.html
@@ -244,7 +244,7 @@ mb-4
 			<span id="help-password"></span>
 		</div>
 
-		<button type="submit" id="button-submit" class="mt-4 w-100 btn btn-lg btn-primary">登录</button>
+		<button type="submit" id="button-submit" class="mt-4 w-100 btn btn-lg btn-primary">注册</button>
 	</form>
 </main>
 
@@ -397,5 +397,6 @@ mb-4
 </div>
 <!-- /container -->
 </body>
+
 
 </html>
